--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 
 # Ignore unused files created by RubyMine.
 /.idea
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
